remove: Remove design experiments and tester app
- Remove design showcase page (/design-showcase)
- Remove ThemeSwitcher component
- Remove design-experiments.css
- Remove accessibility test utility
- Remove design experiments documentation
- Clean up layout imports and JSX

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@types/dompurify": "^3.0.5",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.26.2",
     "next": "16.1.2",
     "react": "19.2.3",
